package cl.interfaces;

/**
 * Interfaz que define contrato de comportamiento para cancelar pedidos.
 */

public interface Cancelable {
	public void cancelar();
}
